[workspace]
resolver = "2"
members = [
    "amm",
    "prism_splitter",
    "testing",
    "libraries/scrypto-interface",
    "libraries/ports-interface",
    "libraries/ociswap-v2-adapter-v1"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
scrypto = { version = "1.3.0" }
scrypto_math = { git = "https://github.com/ociswap/scrypto-math", tag = "v0.7.0" }
prism-calculations = { path = "../prism/backend/rust" }
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }
radix-sbor-derive = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }
radix-engine-derive = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.3.0" }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.