[package]
name = "amm"
version.workspace = true
edition.workspace = true

[dependencies]
scrypto = { workspace = true }
scrypto_math = { workspace = true}
prism-calculations = { workspace = true }
prism_splitter = { path = "../prism_splitter" }

[dev-dependencies]
scrypto-test = { version = "1.3.0" }
radix-transactions = { version = "1.3.0" }
test-case = "3.0"

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]
