[package]
name = "amm"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
scrypto = { workspace = true }
scrypto_math = { workspace = true }
ports-interface = { path = "../libraries/ports-interface" }

[dev-dependencies]
scrypto-test = { version = "1.3.0" }
radix-transactions = { workspace = true }

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]
