[package]
name = "prism-splitter-v2"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
scrypto = { workspace = true }
ports-interface = { path = "../libraries/ports-interface" }
scrypto-interface = { path = "../libraries/scrypto-interface" }

[dev-dependencies]
radix-transactions = { workspace = true }
scrypto-test = { version = "1.3.0" }

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]
