[package]
name = "ports-interface"
version.workspace = true
edition.workspace = true
description = "Defines the interface of the various adapters."

[dependencies]
sbor = { workspace = true }
scrypto = { workspace = true }
radix-transactions = { workspace = true, optional = true }
radix-common = { workspace = true }
radix-sbor-derive = { workspace = true }
radix-engine-interface = { workspace = true }
# radix-engine-derive = { workspace = true }

scrypto-interface = { path = "../scrypto-interface" }

[features]
default = [
    "trait",
    "scrypto-stubs",
    "scrypto-test-stubs",
    "manifest-builder-stubs",
]
trait = []
scrypto-stubs = []
scrypto-test-stubs = []
manifest-builder-stubs = ["dep:radix-transactions"]

[lib]
crate-type = ["cdylib", "lib"]
